--- a/rust-backend-curie/Cargo.toml
+++ b/rust-backend-curie/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rocket = "0.5.0-rc.3"
+diesel = { version = "2.2.0", features = ["mysql"] }
+# build libmysqlclient as part of the build process
+# uncomment this line if you run into setup issues
+# mysqlclient-sys = { version = "0.4", features = ["bundled"] }
+dotenvy = "0.15"
