Implement authentication and user management features
- Add JWT token generation and authentication service
- Create login and register routes in API crate
- Implement password hashing with bcrypt
- Update dependencies to support authentication flow
- Add user repository and model for database interactions

--- a/rust-backend-curie/auth/Cargo.toml
+++ b/rust-backend-curie/auth/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 [dependencies]
 bcrypt = "0.17.0"
 serde = "1.0.217"
+
+database = { path = "../database" }
+jsonwebtoken = "9.3.0"
