--- a/rust-backend-curie/Cargo.toml
+++ b/rust-backend-curie/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 database = { path = "./database" }
 api = { path = "./api" }
 auth = { path = "./auth" }
+serde_json = "1.0.138"
 
 [workspace]
 members = [
     "api",
+    "auth",
     "database",
-    "auth"
+    # ... any other crates
 ]
 resolver = "2"
