--- a/rust-backend-curie/api/Cargo.toml
+++ b/rust-backend-curie/api/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.1"
+rocket = { version = "0.5.0-rc.3", features = ["secrets", "tls", "json"] }
+serde = { version = "1.0.217", features = ["derive"] }
+database = { path = "../database" }
+auth = { path = "../auth" }
