Add reactivos endpoint and update dependencies
- Implement `/productos/reactivos` GET endpoint to retrieve product reactivos
- Update Cargo.toml files to use latest Rocket version (0.5.1)
- Add Chrono dependency for datetime support
- Modify authentication and user repository to handle HTTP status codes
- Update JWT token generation to include admin flag

--- a/rust-backend-curie/auth/Cargo.toml
+++ b/rust-backend-curie/auth/Cargo.toml
@@ -9,3 +9,5 @@ serde = "1.0.217"
 
 database = { path = "../database" }
 jsonwebtoken = "9.3.0"
+
+rocket = { version = "0.5.1", features = ["secrets", "tls", "json",] }
