--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,20 @@
   "dependencies": {
     "@backpackapp-io/react-native-toast": "^0.13.0",
     "@react-native/assets-registry": "^0.77.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/native-stack": "^7.2.0",
     "@reduxjs/toolkit": "^2.5.1",
     "react": "18.3.1",
     "react-native": "0.77.0",
     "react-native-gesture-handler": "^2.23.0",
+    "react-native-keychain": "^9.2.2",
+    "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.6.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
