--- a/rust-backend-curie/api/Cargo.toml
+++ b/rust-backend-curie/api/Cargo.toml
@@ -10,4 +10,5 @@ rocket.workspace = true
 serde.workspace = true
 database = { path = "../database" }
 auth = { path = "../auth" }
+serde_json = "1.0"
 
